samples/_failures_safe/1761515515_c914d4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2c7d752f.c: In function ‘main’:
./samples/SAFE/__tmp_2c7d752f.c:155:27: error: missing terminating " character
  155 |         choice = read_int("Enter your
      |                           ^~~~~~~~~~~
./samples/SAFE/__tmp_2c7d752f.c:155:9: error: expected expression at end of input
  155 |         choice = read_int("Enter your
      |         ^~~~~~
./samples/SAFE/__tmp_2c7d752f.c:155:18: error: too few arguments to function ‘read_int’
  155 |         choice = read_int("Enter your
      |                  ^~~~~~~~
./samples/SAFE/__tmp_2c7d752f.c:16:5: note: declared here
   16 | int read_int(const char* prompt, int min_val, int max_val) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_2c7d752f.c:155:9: error: expected declaration or statement at end of input
  155 |         choice = read_int("Enter your
      |         ^~~~~~
./samples/SAFE/__tmp_2c7d752f.c:155:9: error: expected declaration or statement at end of input
